fix ui gap on index page

--- a/app/style/app.css
+++ b/app/style/app.css
@@ -1,5 +1,7 @@
 html {
   font-size: 16px;
+  padding: 0;
+  margin:0;
 }
 
 body {
@@ -25,7 +27,7 @@ p {
 
 video {
     position: fixed;
-    top: 60%;
+    top: 50%;
     left: 50%;
     min-width: 100%;
     min-height: 100%;
@@ -36,10 +38,23 @@ video {
   transition: 1s opacity;
 }
 
+
 #section-main {
   width:100%;
   /*background: url(https://source.unsplash.com/random) no-repeat center center;
   background-size: cover;*/
+}
+
+#section-main:after {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  background: rgba(0, 0, 0, 0.2);
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .heading {
@@ -62,7 +77,10 @@ video {
   color:white;
 }
 
-
+.navbar{
+  padding:0;
+  margin:0;
+}
 
 .navbar-default{
   background: #fff;
